--- a/css/main.css
+++ b/css/main.css
@@ -1243,7 +1243,7 @@ padding-left: 10px; }
     .banner-area .banner-content {
 padding-left: 0; } }
 .banner-area .banner-content h1 {
-    font-size: 60px;
+    font-size: 56px;
     line-height: 66px;
     font-weight: 700;
 margin-bottom: 30px; }
@@ -5808,4 +5808,13 @@ section.brand-area.section_gap {
 }
 section.owl-carousel.active-product-area.section_gap.owl-theme.owl-loaded {
     padding-bottom: 0px;
+}
+.header_area .navbar .nav .nav-item:hover .nav-link, .header_area .navbar .nav .nav-item.active .nav-link {
+    color: #02afef;
+}
+.gradient-bg, .primary-btn, .add-bag .add-btn, .single-product .product-details .prd-bottom .social-info span:after, .grid-btn:hover, .list-btn:hover, .grid-btn.active, .list-btn.active, .pagination a.active, .pagination a:hover, .s_Product_carousel .owl-dots div.active, .s_product_text .card_area .icon_btn:after, .product_description_area .nav.nav-tabs li a.active, .blog-pagination .page-item.active .page-link, .single-footer-widget .click-btn {
+    background: linear-gradient(90deg, #878787 0%, #0ab0f2 100%);
+}
+section.brand-area.section_gap {
+    padding-bottom: 70px;
 }
