--- a/scss/theme/_elements.scss
+++ b/scss/theme/_elements.scss
@@ -1,5 +1,5 @@
 $default: #f9f9ff;
-$primary: $primary-color;
+$primary: #46d5c1;
 $success: #4cd3e3;
 $info   : #38a4ff;
 $warning: #f4e700;
@@ -155,7 +155,7 @@ h1, h2, h3, h4, h5, h6 {
 		color: $success;
 		border: 1px solid $success;
 		background: $white;
-		
+
 		&:hover {
 			color: $white;
 			background: $success;
@@ -176,7 +176,7 @@ h1, h2, h3, h4, h5, h6 {
 		color: $info;
 		border: 1px solid $info;
 		background: $white;
-		
+
 		&:hover {
 			color: $white;
 			background: $info;
