--- a/css/main.css
+++ b/css/main.css
@@ -1265,7 +1265,7 @@ margin-top: 30px; }
     width: 100%;
     line-height: 52px;
     text-align: center;
-    border-radius: 12px;
+    border-radius: 25px;
 box-shadow: 0 10px 20px rgba(255, 108, 0, 0.2); }
 .add-bag .add-btn span {
     -webkit-transform: rotate(45deg);
@@ -5565,8 +5565,10 @@ color: #777; }
 
 /*============ End Blog Single Styles  =============*/
 /*============== contact_area css ================*/
-.mapBox {
-    height: 420px;
+.mapbox {
+    height: 500px;
+    width: 100%;
+    padding: 0px auto;
     margin-top: 80px;
 margin-bottom: 100px; }
 
@@ -5804,7 +5806,7 @@ color: #ffba00; }
 section.brand-area.section_gap {
     padding-top: 0px;
 /* } */
-/* .single-product-slider { */
+    /* .single-product-slider { */
     padding-bottom: 0px;
 }
 section.owl-carousel.active-product-area.section_gap.owl-theme.owl-loaded {
@@ -5829,4 +5831,13 @@ section.brand-area.section_gap {
 
 .gradient-bg, .primary-btn, .add-bag .add-btn, .single-product .product-details .prd-bottom .social-info span:after, .grid-btn:hover, .list-btn:hover, .grid-btn.active, .list-btn.active, .pagination a.active, .pagination a:hover, .s_Product_carousel .owl-dots div.active, .s_product_text .card_area .icon_btn:after, .product_description_area .nav.nav-tabs li a.active, .blog-pagination .page-item.active .page-link, .single-footer-widget .click-btn {
     background: linear-gradient(90deg, #007bff 0%, #0ab0f2 100%);
+}
+i.lnr.lnr-home  {
+    color: #0aadf3;
+}
+i.lnr.lnr-phone-handset {
+    color: #0aadf3;
+}
+i.lnr.lnr-envelope {
+    color: #0aadf3;
 }
