removing 3 section and adding testimonials and about-us section

--- a/css/main.css
+++ b/css/main.css
@@ -5882,3 +5882,174 @@ i.lnr.lnr-envelope {
     }
 
 }
+
+.prd-bottom {
+    display: none;
+}
+.col-lg-3.col-md-6.col-sm-6 {
+    flex: 1 1 calc(50%);
+}
+.product-section{
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+
+/* textimoanial section */
+/* General styles */
+.arrow-img {
+    cursor: pointer;
+}
+.list-testi {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 10%;
+}
+
+.img-back, .img-next {
+    align-content: center;
+}
+
+.img-back>a>img, .img-next>a>img {
+    height: 20px;
+    width: 20px;
+    opacity: 0.5;
+}
+
+/* Testimonials container */
+.testi-wrap {
+    overflow: hidden;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+/* Testimonials sliding */
+#testimonials {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    width: 100%;
+}
+
+.testi-item {
+    width: 100%;
+    flex-shrink: 0;
+    text-align: center;
+    padding: 10px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
+
+/* Text and captions */
+.testi-text {
+    font-size: 1.2rem;
+    width: 100%;
+    margin: auto;
+}
+
+.caption {
+    margin-top: 1.5rem;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    line-height: calc(1 + .2 / var(--font-body-scale));
+}
+section#testimonail-section {
+    padding-bottom: 50px;
+}
+
+/* about us section */
+.section-padding {
+    padding: 150px 50px;
+}
+.container {
+    width: 1170px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin: 0px auto;
+}
+
+.about-row {
+    display: flex;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+.col-md-4 {
+    width: 33.33333333%;
+}
+.offer-grids{
+  display:flex;
+  flex-wrap: wrap;
+}
+
+.section-title, .section-title-white, .section-title-s2, .section-title-s5, .section-title-s6, .section-title-s7 {
+    margin-bottom: 35px;
+}
+.section-title h2, .section-title-white h2, .section-title-s2 h2, .section-title-s5 h2, .section-title-s6 h2, .section-title-s7 h2 {
+    font-size: 30px;
+    font-size: 2rem;
+    text-transform: uppercase;
+    margin: 0;
+    padding-bottom: 0.5em;
+    position: relative;
+    letter-spacing: -1px;
+}
+h1, h2, h3, h4, h5, h6 {
+    font-weight: bold;
+    color: #051829;
+    margin: 0 0 0.4em;
+}
+
+.offer-grids {
+    overflow: hidden;
+    margin: 0 -15px;
+}
+.offer-grids > .grid:nth-child(1), .offer-grids > .grid:nth-child(2) {
+    margin-bottom: 40px;
+}
+.offer-grids .grid {
+    width: 50%
+    float: left;
+    padding: 0 15px;
+}
+.offer-grids .details {
+    padding-left: 75px;
+    position: relative;
+}
+.offer-grids .details > h3 {
+    font-size: 20px;
+    font-size: 1.33333rem;
+    margin: 0 0 1em;
+}
+.offer-text p, .offer-grids p, .parag {
+    font-size: 1.13333rem;
+    font-weight: 300;
+    text-align: justify;
+    line-height: 1.4em;
+    color: #051829;
+}
+.offer-grids .details .offer-details {
+    font-weight: 600;
+    color: #fdc900;
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    -ms-transition: all 0.2s;
+    transition: all 0.2s;
+}
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+    display: block;
+}
+
+@media(min-width: 992px){
+.col-md-8 {
+    width: 66.66666667%;
+  }
+}
+@media screen and (min-width: 1200px) {
+    .offer-text {
+        padding-right: 30px;
+    }
+}
+
