--- a/css/main.css
+++ b/css/main.css
@@ -6031,7 +6031,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .offer-grids .details .offer-details {
     font-weight: 600;
-    color: #fdc900;
+    color: #2bbcf2;
     -webkit-transition: all 0.2s;
     -moz-transition: all 0.2s;
     -o-transition: all 0.2s;
