adding compartabality to mobile vertion bug: found bug of about us section in next commit i will change that

--- a/css/main.css
+++ b/css/main.css
@@ -5920,7 +5920,7 @@ i.lnr.lnr-envelope {
     padding: 150px 50px;
 }
 .container {
-    width: 1170px;
+    width: 100%;
     padding-right: 15px;
     padding-left: 15px;
     margin: 0px auto;
@@ -6009,21 +6009,20 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     }
 }
 
+@media screen and (max-width: 550px) {
+}
 
 /* testimaonal section start */
 
 .testimonial-section{
-    display: flex;
     width: 100%;
-    height: 500px;
+    display: flex;
     justify-content: center;
-    align-items: center;
-    background: #fff;
 }
+
 .wrap-testimonials{
     display: flex;
     width: 70%;
-    height: 500px;
     padding: 10px;
     justify-content: center;
     align-items: center;
@@ -6063,22 +6062,20 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 .testimoanial-text p{
     color: #000;
-    text-align: center;
-    font-family: Inter;
     font-size: 16px;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
-    align-self: center;
 }
 
 .testimonial-text h3{
     color: #72708A;
     text-align: center;
-    font-family: Inter;
     font-size: 16px;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
+}
+@media screen and (max-width: 550px) {
+    .wrap-testimonials{
+        flex-direction: column;
+    }
+
 }
 /* testimaonal section end */
