--- a/css/main.css
+++ b/css/main.css
@@ -5935,8 +5935,8 @@ i.lnr.lnr-envelope {
     width: 33.33333333%;
 }
 .offer-grids{
-  display:flex;
-  flex-wrap: wrap;
+    display:flex;
+    flex-wrap: wrap;
 }
 
 .section-title, .section-title-white, .section-title-s2, .section-title-s5, .section-title-s6, .section-title-s7 {
@@ -5997,11 +5997,25 @@ h1, h2, h3, h4, h5, h6 {
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
     display: block;
 }
+.owl-item.cloned {
+    display: none;
+}
+
+.owl-carousel.owl-loading {
+    opacity: 1;
+}
+
+.banner-content {
+    color: white;
+}
+.banner-content>h1 {
+    color: white;
+}
 
 @media(min-width: 992px){
-.col-md-8 {
-    width: 66.66666667%;
-  }
+    .col-md-8 {
+        width: 66.66666667%;
+    }
 }
 @media screen and (min-width: 1200px) {
     .offer-text {
@@ -6010,6 +6024,19 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 @media screen and (max-width: 550px) {
+    .col-md-4 {
+        width: 100%;
+    }
+    .col{
+        flex-basis: unset;
+    }
+    .about-row {
+        display: flex;
+        flex-direction: column;
+    }
+    .offer-grids .details {
+        padding-left: 0px;
+    }
 }
 
 /* testimaonal section start */
