--- a/css/main.css
+++ b/css/main.css
@@ -6037,6 +6037,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     .offer-grids .details {
         padding-left: 0px;
     }
+    .section-padding {
+        padding: 150px 10px;
+    }
 }
 
 /* testimaonal section start */
@@ -6093,6 +6096,10 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     font-weight: 400;
 }
 
+.testimonial-text>p{
+    text-align:center;
+}
+
 .testimonial-text h3{
     color: #72708A;
     text-align: center;
@@ -6102,6 +6109,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 @media screen and (max-width: 550px) {
     .wrap-testimonials{
         flex-direction: column;
+        width: 100%;
     }
 
 }
