--- a/css/main.css
+++ b/css/main.css
@@ -6143,6 +6143,9 @@ footer .row {
     align-items: center;
 }
 
+.col-lg-5 {
+    padding-top: 5rem;
+}
 
 /*start mobile version changes*/
 @media (max-width: 575.98px) {
