--- a/css/main.css
+++ b/css/main.css
@@ -6272,3 +6272,7 @@ div#banner-text {
     max-width: 100%;
     width: 100%;
 }
+
+.col-md-12, .text-right {
+    text-align: center  !important;
+}
